# clickup-mcp

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup_mcp.py  start-clickup-mcp.sh
clickup_mcp_server/: __main__.py  cli.py  client.py  config.py  models.py  server.py  setup.py
clickup_mcp_server/tools/: comments.py  docs.py  reporting.py  sprint.py  tasks.py  workspace.py
tests/: conftest.py  helpers.py  test_cli.py  test_client.py  test_integration.py  test_models.py  test_setup.py  test_tools_comments.py  test_tools_docs.py  test_tools_sprint.py  test_tools_tasks.py  test_tools_workspace.py
