[project]
name = "clickup-mcp-server"
version = "0.1.0"
description = "MCP server for ClickUp task management"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.26.0",
    "httpx>=0.28.0",
    "pydantic-settings==2.13.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "pytest-httpx>=0.35.0",
    "mypy>=1.18.0",
    "deptry>=0.23.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = ["PLR2004", "PLR0912"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SLF001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
